--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,7 +11,8 @@ jobs:
             - name: Run tests
               run: npm test
     deploy:
-      runs-on: ubuntu-lates
+      needs: test
+      runs-on: ubuntu-latest
       steps:
         - name: Get code
           uses: actions/checkout@v3
